# TFHEpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  akakou_bench.ipy
benchmark/: bench.cpp  bench_nand.cpp
include/: cloudkey.hpp  detwfa.hpp  encoder.hpp  gate.hpp  gatebootstrapping.hpp  key.hpp  keyswitch.hpp  lweParams.hpp  mulfft.hpp  params.hpp  tester.hpp  tlwe.hpp  trgsw.hpp  trlwe.hpp  utils.hpp
include/params/: 128bit.hpp  CGGI16.hpp  CGGI19.hpp
src/: circuitbootstrapping.cpp  cloudkey.cpp  detwfa.cpp  gate.cpp  gatebootstrapping.cpp  keyswitch.cpp  tlwe.cpp  trgsw.cpp  trlwe.cpp
test/: INTorus.cpp  arithmetic_gate.cpp  bitsequencerepresentation.cpp  cereal.cpp  circuitbootstrapping.cpp  circuitbootstrappinglvl22.cpp  cmux.cpp  combinedmem.cpp  evalauto.cpp  externalproduct.cpp  gatebootstrapping.cpp  invcircuitbootstrapping.cpp  lwemul.cpp  nand.cpp  nested_cmux.cpp  packing.cpp  packingkeyswitch.cpp  packram.cpp  programable_bootstraping.cpp  programablebootstrapping.cpp  ram.cpp  rom.cpp  serialize.cpp  write.cpp
test_copy/: test.cpp
thirdparties/spqlios/: fft_processor_spqlios.cpp  spqlios-fft.h
tutorial/: CMakeLists.txt  akakou_bench.cpp  mytest.cpp  mytest2.cpp  mytest3.cpp  mytest4.cpp  mytest5.cpp  mytest6.cpp  mytest7.cpp  mytest8.cpp  mytest_cmux.cpp  mytest_cmux_ring.cpp  pbs_identity_bench.cpp
