add_executable(client client.cpp)
add_executable(cloud cloud.cpp)
add_executable(verify verify.cpp)
add_executable(mytest mytest.cpp)
add_executable(mytest2 mytest2.cpp)
add_executable(mytest3 mytest3.cpp)
add_executable(mytest4 mytest4.cpp)
target_link_libraries(client tfhe++)
target_link_libraries(cloud tfhe++)
target_link_libraries(verify tfhe++)
target_link_libraries(mytest tfhe++)
target_link_libraries(mytest2 tfhe++)
target_link_libraries(mytest3 tfhe++)
target_link_libraries(mytest4 tfhe++)
